app/src/main/java/sdk/api/development/examples/festivo_api/errors/PaymentRequiredError.java
package sdk.api.development.examples.festivo_api.errors;

public class PaymentRequiredError extends RuntimeException {
    
}
